Yogapi Projet Update README.md & Minor Fix

--- a/css/components/section.css
+++ b/css/components/section.css
@@ -5,6 +5,79 @@ section {
     padding: 0 var(--window-border);
 }
 
+section.project {
+    padding-top: calc(64px + 2rem);
+}
+
+section.project a#go-back {
+    display: flex;
+    align-items: center;
+    font-family: "Inter";
+    color: var(--primary);
+}
+
+section.project a#go-back svg {
+    margin-right: 8px;
+}
+
+section.project .project-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+section.project .project-container .title h1 {
+    font-size: 4vw;
+    margin: 2rem 0 1rem 0;
+}
+
+section.project .project-container .title .tags {
+    display: flex;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+section.project .project-container .title .tags li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 8px 16px;
+    border-radius: 24px;
+    margin-right: 1rem;
+    background: var(--complementary);
+    color: var(--complementary-text);
+}
+
+section.project .project-container .title .tags li:last-child {
+    margin-right: 0rem;
+}
+
+section.project .project-container .title p.description a {
+    color: var(--primary);
+}
+
+section.project .project-container .visualisation {
+    padding: 3rem;
+    display: flex;
+}
+
+section.project .project-container .visualisation iframe {
+    height: 60vh;
+    margin-right: 3rem;
+    padding: 0.5rem;
+    border: 2px solid var(--black);
+    border-radius: 24px;
+}
+
+section.project .project-container .visualisation iframe.mobile {
+    aspect-ratio: 9/16;
+}
+
+section.project .project-container .visualisation .images {
+    width: 100%;
+}
+
 /* Projects */
 
 section#projects {
@@ -280,7 +353,6 @@ section#contact .contact .ctas a button svg {
 section#contact p#consultation-time {
     color: var(--grey);
 }
-
 
 /* En Travaux */
 section#zone-travaux {
