--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@
     --grey: #47506B;
     --white: #fff;
 
+    --complementary: #FFBF00;
+    --complementary-text: #5C2B00;
+
     /* SPACING */
     --window-border: 10vw;
 
